# kos

./: .gitignore  .lefthook.yml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  KOS-charter.md  README.md  SECURITY.md  SETUP.md  build.rs  deny.toml  justfile  seed.yaml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  question.yml
.github/workflows/: audit.yml  ci.yml  codeql.yml  scorecards.yml
Formula/: kos.rb
_kos/: kos.yaml
_kos/findings/: finding-001-mvg-bootstrap.yaml  finding-003-alpha.yaml  finding-003-axiathon.yaml  finding-005-backstage.yaml  finding-006-crossplane.yaml  finding-009-go-proposals.yaml  finding-010-python-peps.yaml  finding-011-bmad-enterprise.yaml  finding-013-autogen.yaml  (+25 more)
docs/: kos-nine-improvements-reassessed.md  kos-nine-improvements.md  kos-prior-work-survey.md  kos-roadmap-v2.md  kos-roadmap-v3.md  kos-roadmap-v3_1.md  kos-roadmap.md  kos-use-assessment.md  product-brief.md
findings/: finding-002-penny-orc.yaml  finding-004-schema-revision.yaml  finding-006-crossplane.yaml  finding-007-kubernetes.yaml  finding-008-rust-rfcs.yaml  finding-010-python-peps.yaml  finding-011-bmad-enterprise.yaml  finding-014-twelve-project-synthesis.yaml  finding-016-code-only-bootstrap.yaml  finding-018-ripple-engine-design.yaml  finding-020-executive-mechanism.yaml  finding-022-executive-twelve-project-synthesis.yaml  finding-025-atmos-seam-test.yaml  finding-026-gitlab-issues-as-spec.yaml  finding-029-kos-orient-probe.yaml  finding-030-schema-tooling-probe.yaml
packaging/: Info.plist
probes/: brief-code-only-bootstrap.yaml  brief-executive-empirical-test.yaml  brief-executive-mechanism.yaml  brief-kos-orient.yaml  brief-mvg-bootstrap.yaml  brief-rd-bridge.yaml  brief-schema-revision.yaml  brief-schema-tooling.yaml  brief-signal-to-noise.yaml  brief-what-cant-be-a-node.yaml  probe-gitlab-issues-as-spec.yaml  project-lineup.yaml
schema/: manifest.schema.yaml  node.schema.yaml
scripts/: create-app.sh  create-dmg.sh  create-pkg.sh  create-roadmap-issues.sh
sessions/: session-001.md
src/: bridge.rs  charter.rs  compact.rs  doctor.rs  drift.rs  error.rs  graph.rs  init.rs  lib.rs  main.rs  model.rs  orient.rs  process.rs  reflect.rs  seed.rs  updater.rs  validate.rs  workspace.rs
tests/: validate_scoping.rs
(+260 files in other folders)
